@@ -1,3 +1,6 @@
+ALPHA 0.0.10 - April 26, 2025
+- Added non-functioning settings
+
 ALPHA 0.0.9 - April 25, 2025
 - Fixed bullet jitter in PvE
 
